.provarCaches/00D5f000005vwGkEAI/objects/rstk__apierr__c.object
<CustomObject>
    <description>apierr__c</description>
    <fields>
        <fullName>rstk__apierr_api__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>API Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__apierr_askdate__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Moment of API Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__apierr_containerid__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Container ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__apierr_errormessage__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__apierr_errortype__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__apierr_item__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__apierr_txndate__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__apierr_api__c + &apos; &apos; + TEXT(rstk__apierr_errortype__c) + &apos;@&apos; + TEXT( rstk__apierr_askdate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>TEST DATA</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WMS API Error</label>
    <listViews>
        <fullName>rstk__API_Errors</fullName>
        <columns>rstk__apierr_errortype__c</columns>
        <columns>NAME</columns>
        <columns>rstk__apierr_item__c</columns>
        <columns>rstk__apierr_errormessage__c</columns>
        <columns>rstk__apierr_api__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__apierr_askdate__c</columns>
        <columns>rstk__apierr_containerid__c</columns>
        <columns>rstk__apierr_txndate__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>API Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WMS API Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>